# openapi/db/models/testcase.py
@@ -85,3 +85,14 @@ class TestCase(db.Entity):
             }
         else:
             raise IsNotExist(title='测试用例不存在', detail=f'id为{case_id}的测试用例不存在')
+
+
+    @classmethod
+    @db_session
+    def delete_case_by_id(cls, case_id, user):
+        obj = get(n for n in TestCase if n.id == case_id and n.delete_at == None)
+        if obj:
+           obj.delete_at = datetime.datetime.utcnow()
+           obj.user = user
+        else:
+            raise IsNotExist(title='测试用例不存在', detail=f'id为{case_id}的测试用例不存在')
